changes size of slider from % to pixel due to too small size bug

--- a/octoprint_mrbeam/static/css/svgtogcode.css
+++ b/octoprint_mrbeam/static/css/svgtogcode.css
@@ -97,7 +97,7 @@ svg text {
 }
 
 .overrideSlider input {
-	width:45%;
+	width:130px;
 }
 .overrideSlider span {
 	padding-left: .6em;
